src/App.module.scss
/* App.module.scss */

.container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 20px;
  background-color: #000;
  color: #fff;
  padding: 20px;
  border-radius: 12px;
  box-shadow: 8px 8px 16px #000000, -8px -8px 16px #ffffff;
  margin-bottom: 32px;
  min-width: 300px;
}

.row {
  display: flex;
  gap: 16px;
}

.button {
  width: 100px;        
  height: 60px;        
  padding: 0;
  border: 2px solid #fff;
  border-radius: 12px;
  background-color: #000;
  color: #fff;
  font-size: 18px;
  font-weight: bold;
  text-align: center;
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: pointer;
  transition: all 0.3s ease;

  &.selected {
  background-color: #fff;
  color: #000;
}
}



.appWrapper {
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: center;
  min-height: 100vh;
  background: #f0f0f0;
}
.boardWrapper {
  position: relative;
}

.loaderOverlay {
  position: absolute;      
  inset: 0;           
  display: flex;        
  align-items: center;
  justify-content: center;
  backdrop-filter: blur(8px);
  z-index: 9999;
}

.loader {
  pointer-events: none; /* prevent blocking clicks behind if needed */
}


.title {
  font-size: 48px;
  font-weight: 800;
}

.resetButton {
  padding: 12px 20px;
  border: 2px solid #000;
  border-radius: 8px;
  background-color: #fff;
  color: #000;
  font-weight: bold;
  cursor: pointer;
}

